ci: add github actions workflow and dependency management
Add CI/CD pipeline with comprehensive linting and validation checks for the chezmoi dotfiles
repository.

- Add GitHub Actions workflow with lint, fish syntax, and chezmoi verification jobs
- Add Renovate configuration for automated dependency updates with semantic commits
- Update chezmoi ignore patterns to exclude CI files and documentation from managed files

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,6 +1,9 @@
 # Ignore README and other repo files
 README.md
+CLAUDE.md
 LICENSE
+.github/
+renovate.json
 
 # OS-specific ignores
 {{ if ne .chezmoi.os "linux" }}
