ci: fix chezmoi command flag ordering in workflow
Updates the CI workflow to use proper chezmoi command syntax by moving the --source flag before
subcommands. This ensures compatibility with newer versions of chezmoi and prevents potential
parsing issues.

- Move --source flag before init, verify, and managed subcommands
- Maintain same functionality while following correct CLI syntax
- Apply consistent flag ordering across all chezmoi commands in workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -91,8 +91,8 @@ jobs:
           EOF
 
           # Verify chezmoi can parse all templates
-          chezmoi init --source="$(pwd)" --force
-          chezmoi verify
+          chezmoi --source="$(pwd)" init --force
+          chezmoi --source="$(pwd)" verify
 
       - name: Check managed files
-        run: chezmoi managed --source="$(pwd)"
+        run: chezmoi --source="$(pwd)" managed
