ci: exclude .chezmoi.toml.tmpl from template rendering verification
Update the CI template verification step to skip .chezmoi.toml.tmpl file during testing as it uses
promptStringOnce function which only works during chezmoi init.

- Add exclusion for .chezmoi.toml.tmpl in find command
- Include comment explaining why this file is skipped
- Prevent CI failures from template files requiring interactive initialization

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -97,7 +97,8 @@ jobs:
       - name: Verify templates render
         run: |
           # Test that all .tmpl files render without errors
-          find . -name "*.tmpl" -type f | while read -r f; do
+          # Skip .chezmoi.toml.tmpl (uses promptStringOnce which only works during init)
+          find . -name "*.tmpl" -type f ! -name ".chezmoi.toml.tmpl" | while read -r f; do
             echo "Testing template: $f"
             chezmoi execute-template < "$f" > /dev/null
           done
