ci: use chezmoi init for test data configuration
Replace manual config file creation with chezmoi init command to properly initialize the repository
with test data in the CI pipeline.

- Switch from creating ~/.config/chezmoi/chezmoi.toml manually to using chezmoi init
- Use --force flag to enable non-interactive initialization
- Pass test data via --promptString and --promptChoice flags for cleaner setup

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,14 +85,11 @@ jobs:
           mkdir -p ~/.local/share
           ln -s "$(pwd)" ~/.local/share/chezmoi
 
-          # Create chezmoi config with test data
-          mkdir -p ~/.config/chezmoi
-          cat > ~/.config/chezmoi/chezmoi.toml << 'EOF'
-          [data]
-            name = "Test User"
-            email = "test@example.com"
-            machine_type = "personal"
-          EOF
+          # Initialize chezmoi with test data (non-interactive)
+          chezmoi init --force \
+            --promptString name="Test User" \
+            --promptString email="test@example.com" \
+            --promptChoice machine_type=personal
 
       - name: Verify templates render
         run: |
