ci: fix chezmoi init command format in github workflow
Updates the chezmoi initialization command to use the correct syntax for passing multiple prompt
values. The command now properly formats multiple key-value pairs as comma-separated strings within
single quotes.

- Fix promptString parameter to use comma-separated format for multiple values
- Fix promptChoice parameter syntax to match chezmoi requirements
- Add clarifying comment about expected parameter format

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -86,10 +86,10 @@ jobs:
           ln -s "$(pwd)" ~/.local/share/chezmoi
 
           # Initialize chezmoi with test data (non-interactive)
+          # --promptString and --promptChoice take comma-separated key=value pairs
           chezmoi init --force \
-            --promptString name="Test User" \
-            --promptString email="test@example.com" \
-            --promptChoice machine_type=personal
+            --promptString 'name=Test User,email=test@example.com' \
+            --promptChoice 'machine_type=personal'
 
       - name: Verify templates render
         run: |
