feat(): add flatpak app management with machine type support
Implements automated flatpak application installation with support for different machine
configurations. The system installs common apps on all machines while restricting work-specific apps
to work machines only.

- Add base app list with Discord, Telegram, Zed editor, and utilities
- Add work-only app list with Slack and Trayscale VPN client
- Create onchange script that triggers when app lists are modified
- Configure chezmoi to ignore work apps on personal machines

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -16,7 +16,7 @@ dev/
 {{- if hasKey . "machine_type" }}
 {{- if eq .machine_type "personal" }}
 # Work-only configs ignored on personal machines
-# .config/work-specific/
+.config/flatpak/apps-work.txt
 {{- end }}
 
 {{- if eq .machine_type "work" }}
