build: add appimage integration with gh and flatpak dependencies
Adds automated AppImage installation and integration system using Gear Lever with GitHub CLI for
downloading releases. Enhances Docker development environment with required dependencies for the
AppImage workflow.

• Add gh and flatpak packages to Ubuntu Docker development environment
• Create AppImage installation script with automatic integration via Gear Lever
• Download and integrate common AppImages including Cursor, Streamlink, and Streamlink Twitch GUI
• Add work-specific AppImages for GitButler and HttpToolkit when machine type is work
• Implement duplicate detection to skip already integrated applications

--- a/dev/Dockerfile.ubuntu
+++ b/dev/Dockerfile.ubuntu
@@ -6,6 +6,8 @@ RUN apt-get update -q \
         bash \
         curl \
         git \
+        gh \
+        flatpak \
         sudo \
         locales \
         fontconfig \
