feat: add bash shell configuration and expand tool set
Add bash support alongside existing fish shell configuration and expand the development tool set
with additional utilities for enhanced productivity.

- Add dot_bashrc with PATH configuration, mise activation, modern CLI aliases, and Starship prompt
- Add dot_profile for login shell configuration with mise shims for non-interactive shells
- Extend CI workflow to lint and format dot_bashrc and dot_profile files
- Add zoxide, hurl, and yt-dlp tools to mise configuration
- Add sudo function to fish aliases to preserve PATH for mise tools

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,13 @@ jobs:
             shellcheck "$f" || failed=1
           done
 
+          # Check dot_bashrc and dot_profile (no .sh extension)
+          for f in dot_bashrc dot_profile; do
+            [[ -f "$f" ]] || continue
+            echo "Checking $f"
+            shellcheck -s bash "$f" || failed=1
+          done
+
           # Check .sh.tmpl files (replace template syntax with placeholders)
           for f in **/*.sh.tmpl; do
             [[ -f "$f" ]] || continue
@@ -61,6 +68,13 @@ jobs:
 
           # Check plain .sh files
           for f in **/*.sh; do
+            [[ -f "$f" ]] || continue
+            echo "Checking $f"
+            shfmt -d -i 4 -ci "$f" || failed=1
+          done
+
+          # Check dot_bashrc and dot_profile (no .sh extension)
+          for f in dot_bashrc dot_profile; do
             [[ -f "$f" ]] || continue
             echo "Checking $f"
             shfmt -d -i 4 -ci "$f" || failed=1
