feat: enhance development environment with bitwarden integration and improved tooling
Add Bitwarden integration to chezmoi configuration and expand development tools setup. This update
improves security credential management and provides better development experience across different
machine types.

- Add Bitwarden command configuration to chezmoi template
- Expand global gitignore with comprehensive file patterns and better organization
- Add tlrc (tldr client) to mise tools for improved command documentation
- Configure git to use global excludes file
- Create SSH configuration template with GitHub integration for personal and work accounts
- Remove GitButler from work machine AppImage installations

--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -25,6 +25,7 @@ yq = "latest"
 bottom = "latest"
 xh = "latest"
 hurl = "latest"
+tlrc = "latest"  # tldr client
 "aqua:ouch-org/ouch" = "latest"
 
 # Git & VCS
