ci: add else template replacement in shellcheck and shfmt steps
Improves template processing by adding sed replacement for Go template else statements. This ensures
proper comment substitution for conditional blocks during linting.

- Add sed expression to replace `{{ else -}}` with `# else` comment
- Apply change to both shellcheck and shfmt workflow steps
- Maintains consistency with existing template placeholder handling

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,6 +55,7 @@ jobs:
             sed -e 's/{{ include "[^"]*" | sha256sum }}/HASH_PLACEHOLDER/' \
                 -e 's/{{ \.machine_type }}/personal/' \
                 -e 's/{{ if eq \.machine_type "work" -}}/# if work machine/' \
+                -e 's/{{ else -}}/# else/' \
                 -e 's/{{ end -}}/# end if/' \
                 "$f" | shellcheck -s bash - || failed=1
           done
@@ -87,6 +88,7 @@ jobs:
             sed -e 's/{{ include "[^"]*" | sha256sum }}/HASH_PLACEHOLDER/' \
                 -e 's/{{ \.machine_type }}/personal/' \
                 -e 's/{{ if eq \.machine_type "work" -}}/# if work machine/' \
+                -e 's/{{ else -}}/# else/' \
                 -e 's/{{ end -}}/# end if/' \
                 "$f" | shfmt -d -i 4 -ci || failed=1
           done
