feat: improve terminal workspace ergonomics and session management
Enhanced terminal configuration with better visual spacing and session handling. Added dynamic
padding to Alacritty for improved readability and implemented Zellij session cleanup utilities with
viewport serialization for better workspace restoration.

• Enable dynamic window padding in Alacritty with 4px horizontal and vertical spacing
• Add zj-clean alias for automatic cleanup of Zellij sessions older than 60 days
• Configure Zellij pane viewport serialization with 1000 scrollback lines for session restoration

--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -20,6 +20,11 @@ style = "Italic"
 
 [window]
 opacity = 0.9
+dynamic_padding = true
+
+[window.padding]
+x = 4
+y = 4
 
 [mouse]
 hide_when_typing = true
