build: enhance dev environment with additional tools and privileged container access
Updates development environment to support more comprehensive tooling and testing capabilities.

- Add GitHub CLI and Flatpak to development container dependencies
- Enable privileged mode in Docker test containers for system-level operations
- Add resterm terminal tool via mise configuration
- Remove posting from UV tools configuration
- Remove streamlink and streamlink-twitch-gui from AppImage installations

--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -31,6 +31,7 @@ yq = "latest"
 bottom = "latest"
 xh = "latest"
 hurl = "latest"
+"github:unkn0wn-root/resterm" = "latest"
 tlrc = "latest"  # tldr client
 "aqua:ouch-org/ouch" = "latest"
 
